--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <img src="logo.jpg" class="logo">
             <ul id="sidemenu">
-                <li><a href="act.html">Home</a></li>
-                <li><a href="4.html">About</a></li>
-                <li><a href="2.html">Portifolio</a></li>
-                <li><a href="3.html">Contact</a></li>
+                        <li><a href="https://throneking.github.io/Ishaan.com/">Home</a></li>
+                        <li><a href="https://throneking.github.io/Ishaan4/">About</a></li>
+                        <li><a href="https://throneking.github.io/Ishaan2/">Portfolio</a></li>
+                        <li><a href="https://throneking.github.io/Ishaan3/">Contact</a></li>
             </ul>
         </nav>
     </header>
